fix input bug on safari

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -10,10 +10,6 @@ $secondary: #f96d00;
     font-family: 'Montserrat';
     user-drag: none;
     -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
 
     a {
         text-decoration: none;
